--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vendors/ImGuizmo"]
 	path = vendors/ImGuizmo
 	url = https://github.com/CedricGuillemet/ImGuizmo
+[submodule "vendors/tinyxml2"]
+	path = vendors/tinyxml2
+	url = https://github.com/leethomason/tinyxml2
